--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
     "@mui/icons-material": "5.11.11",
     "@mui/lab": "5.0.0-alpha.123",
     "@mui/material": "5.11.13",
-    "@mui/x-data-grid-premium": "5.13.0",
     "@mui/styles": "5.9.0",
-    "@emotion/styled": "11.8.1",
-    "@emotion/react": "11.9.0",
+    "@mui/x-data-grid-premium": "5.13.0",
+    "mapbox-gl": "2.13.0",
     "mime": "3.0.0",
     "next": "13.2.4",
     "next-pwa": "5.6.0",
