--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
     "@mui/icons-material": "5.11.11",
     "@mui/lab": "5.0.0-alpha.123",
     "@mui/material": "5.11.13",
-    "@mui/x-data-grid-premium": "5.13.0",
     "@mui/styles": "5.9.0",
-    "@emotion/styled": "11.8.1",
-    "@emotion/react": "11.9.0",
+    "@mui/x-data-grid-premium": "5.13.0",
     "mime": "3.0.0",
     "next": "13.2.4",
     "next-pwa": "5.6.0",
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "11.2.0",
     "react-number-format": "5.1.4",
+    "usehooks-ts": "2.9.1",
     "uuid": "9.0.0"
   },
   "devDependencies": {
