--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "2.7.10",
     "@types/mime": "3.0.1",
     "@types/node": "17.0.4",
     "@types/ramda": "0.28.23",
