--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "11.2.0",
+    "react-google-autocomplete": "2.7.3",
     "react-number-format": "5.1.4",
     "usehooks-ts": "2.9.1",
     "uuid": "9.0.0"
