--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "5.11.13",
     "@mui/styles": "5.9.0",
     "@mui/x-data-grid-premium": "5.13.0",
+    "@turf/bbox": "6.5.0",
     "mapbox-gl": "2.13.0",
     "mime": "3.0.0",
     "next": "13.2.4",
