--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "NHVR Route Planner",
-  "short_name": "NHVR Route Planner",
+  "short_name": "NHVR Routes",
   "theme_color": "#0F2D52",
   "background_color": "#0F2D52",
   "display": "fullscreen",
